--- a/public/index.html
+++ b/public/index.html
@@ -36,14 +36,14 @@
         </style>
         <style type="text/css">
            .btn:hover {
-               border: 1px solid #2196f3 !important;
+               border: 1px solid #3f51b5 !important;
                background-color: #fff !important;
-               color: #2196f3 !important;
+               color: #3f51b5 !important;
            }
            .btn {
                margin: 15px 0 !important;
-               border: 1px solid #2196f3 !important;
-               background-color: #2196f3 !important;
+               border: 1px solid #3f51b5 !important;
+               background-color: #3f51b5 !important;
                color: #fff !important;
            }
            body{
@@ -57,7 +57,7 @@
                border-radius: 0% !important;
            }
        </style>
-    <title>| Listings for the Former BuildCert Program</title>
+    <title>Treco Admin</title>
   </head>
   <body>
     <noscript>
